# moge

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cppes8/src/: cppes8.hpp  gfx.hpp  handle.hpp  sdl2.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
game_math/src/: vec.hpp
src/: fixed_array.hpp  handle.hpp  handle_pool.hpp  linear_allocator.hpp  macro.hpp  trivial.hpp
src/app/: main_loop.hpp
src/audio/: wav.hpp
src/container/: fixed_array.hpp  linear_allocator.hpp
src/gl/: gl.cpp  gl.hpp
src/gl/d3d11/: constant_buffer.cpp  constant_buffer.hpp  context.cpp  context.hpp  gl.cpp  gl.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform_array.cpp  uniform_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/gl/ogl/: bind.cpp  bind.hpp  context.cpp  context.hpp  gl.cpp  gl.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform_array.cpp  uniform_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/io/: file_win.hpp
src/render/: d3d11.hpp  input_layout_d3d11.hpp  render_minimal_d3d11.hpp  shader_object_d3d11.hpp  texture2d_static_d3d11.hpp  vertex_buffer_d3d11.hpp
src/sdl/: sdl.cpp  sdl.hpp
src/thread/: mutex_win.hpp  thread_win.hpp
tests/: constant_buffer.hpp  gl_context.hpp  gl_context_fixture.hpp  main.cpp  sdl.hpp  sdl_fixture.hpp  texture.hpp  uniform_array.hpp  vertex_buffer.hpp
